--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-bold leading-tight tracking-wide;
+  @apply font-bold leading-tight;
 }
 
 h1 {
@@ -69,6 +69,7 @@ pre {
 
 a {
   @apply text-primary hover:text-primary-700 visited:text-primary-600 active:text-primary-700 dark:hover:text-primary-400 dark:visited:text-primary-500 dark:active:text-primary-600;
+  @apply underline underline-offset-2;
 }
 
 ul,
