--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -53,7 +53,8 @@ article {
   ul,
   ol,
   code,
-  blockquote {
+  blockquote,
+  img {
     @apply my-6 text-xl leading-normal tracking-[0.01em] font-light opacity-90;
 
     strong,
@@ -93,5 +94,9 @@ article {
 
   ol {
     @apply list-decimal;
+  }
+
+  img {
+    @apply block mx-auto max-w-full;
   }
 }
